# crypto-primes

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  crypto-primes.yml
benches/: bench.rs  cctv.rs
examples/: distribution.rs
resources/: docs-header.html
src/: error.rs  fips.rs  generic.rs  hazmat.rs  lib.rs  main.rs  multicore.rs  presets.rs  rng.rs  stat_utils.rs  traits.rs  uint_traits.rs  uniform_sieve.rs
src/hazmat/: float.rs  gcd.rs  jacobi.rs  libm.rs  log2.rs  lucas.rs  miller_rabin.rs  precomputed.rs  primecount.rs  primes.rs  pseudoprimes.rs  sieve.rs  uniform_sieve.rs  utils.rs
src/stat_utils/: mod.rs
