[package]
name = "crypto-primes"
version = "0.7.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Random prime number generation and primality checking library"
repository = "https://github.com/entropyxyz/crypto-primes"
readme = "README.md"
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
crypto-bigint = { version = "0.7", default-features = false, features = ["rand_core"] }
libm = { version = "0.2.13", default-features = false, features = ["arch"] }
rand_core = { version = "0.10", default-features = false }
rayon = { version = "1", optional = true, default-features = false }

# Optional dependencies used in tests and benchmarks
openssl = { version = "0.10.39", optional = true, features = ["vendored"] }
rug = { version = "1.26", optional = true, default-features = false, features = ["integer"] }
glass_pumpkin = { version = "2.0.0-rc.0", optional = true }

[dev-dependencies]
rand = { version = "0.10", features = ["chacha"] }
# need `crypto-bigint` with `alloc` to test `BoxedUint`
crypto-bigint = { version = "0.7", default-features = false, features = ["alloc"] }
criterion = { version = "0.5", features = ["html_reports"] }
num-modular = { version = "0.5", features = ["num-bigint"] }
num-bigint = "0.4"
num-integer = "0.1"
proptest = "1"
num-prime = "0.4.3"
num_cpus = "1.16"
float-cmp = "0.10"

[features]
tests-openssl = ["openssl"]
tests-gmp = ["rug/std"]
tests-glass-pumpkin = ["glass_pumpkin"]
tests-exhaustive = []
tests-all = ["tests-openssl", "tests-gmp", "tests-exhaustive", "tests-glass-pumpkin"]
multicore = ["rayon"]
alloc = []
default = ["alloc"]

[package.metadata.docs.rs]
all-features = true
# Pass arguments to rustdocs as rendered by docs.rs:
# - `--cfg docsrs` is used to conditionally enable the unstable feature `doc-cfg`
# - `--html-in-header` is used to enable LaTeX rendering in docs
#   (note that `rustdoc-args` overrides the global setting in `.cargo/config.toml` instead of extending it,
#   so we need to repeat `--html-in-header` here)
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "./resources/docs-header.html"]

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "cctv"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(cpubits, values("16", "32", "64"))']

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Good idea, but if you implement this change,
# the compiler complains about a `pub(crate)` item being exported as `pub`.
redundant_pub_crate = "allow"

# Too restrictive, sometimes there's not need to specifically describe errors.
missing_errors_doc = "allow"

# Math code. What can you do.
similar-names = "allow"
many_single_char_names = "allow"

# We have a lot of those, they are often copy-pasted from prime/pseudoprime databases,
# and they can't be fixed automatically. Allowing for now.
unreadable_literal = "allow"

# Unfortunately it does not distinguish between panics that may occur for some inputs
# and panics that may only occur if there is a bug in the code (expects).
missing_panics_doc = "allow"

# Select warning from the `restriction` category.
alloc_instead_of_core = "warn"
allow_attributes = "warn"
as_conversions = "warn"
indexing_slicing = "warn"
mod_module_files = "warn"
unwrap_used = "warn"

# Due to https://github.com/rust-lang/rust-clippy/issues/13885, triggers on clippy.toml
# TODO: can be removed when MSRV and therefore the clippy version in CI is 1.87 or higher.
literal_string_with_formatting_args = "allow"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
missing_copy_implementations = { level = "warn" }
missing_debug_implementations = { level = "warn" }
trivial_casts = { level = "warn" }
trivial_numeric_casts = { level = "warn" }
missing_docs = { level = "warn" }
unused_qualifications = { level = "warn" }
unsafe_code = { level = "deny" }
